# autopack-demo

./: README.md  main.py  pyproject.toml
demo/: main.py  packs.py
